# webdantic

./: .gitignore  .tmuxp.yaml  README.md  SPEC.md  devenv.nix  pyproject.toml
examples/: basic_navigation.py  form_filling.py  screenshots.py
scripts/: dump_selectors.py
src/webdantic/: __init__.py
src/webdantic/config/: __init__.py  models.py
src/webdantic/core/: __init__.py  browser.py  page.py  selector.py  tab.py  window.py
src/webdantic/exceptions/: __init__.py  errors.py
src/webdantic/types/: __init__.py  common.py
src/webdantic/views/: __init__.py  list.py  table.py
tests/: conftest.py  test_public_api.py
tests/integration/: test_e2e.py
tests/unit/: test_browser.py  test_config.py  test_exceptions.py  test_page.py  test_selector.py  test_tab.py  test_types.py  test_window.py
